--- a/app/views/poems/index.html.erb
+++ b/app/views/poems/index.html.erb
@@ -1,4 +1,8 @@
-<%= @poems.each do |poem| %>
-  <%= poem.title %>
-  <%= poem.content %>
+<<h1>Poem一覧</h1>
+
+<% @poems.each do |poem| %>
+ <p>タイトル:<%= poem.title %></p>
+ <p>内容:<%= poem.content %></p>
+ <p><%= link_to "詳細", poem %></p>
+
 <% end %>
